<resources>

    <string name="app_name">Outer Space Manager</string>

    <!--> Auth forms <-->
    <string name="user_name">Nom d\'utilisateur</string>
    <string name="user_password">Mot de passe</string>
    <string name="user_mail">Email</string>
    <string name="success_login">Vous êtes connecté</string>
    <string name="signin_success">Inscription réussie</string>
    <string name="validate">Valider</string>

    <!--> Titles <-->
    <string name="title_login">Se connecter</string>
    <string name="title_signin">S\'inscrire</string>
    <string name="title_logout">Se déconnecter</string>
    <string name="title_buildings">Mes batiments</string>

    <!--> HTTP <-->
    <string name="unauthorized_login">Identifiants invalides</string>
    <string name="server_not_respond">Le serveur de répond pas</string>
    <string name="bad_request_signin">Le mail ou le username existe déjà</string>
    <string name="unauthorized_signin">Identifiants invalides</string>

    <!--> Main <-->
    <string name="main_general">Vue générale</string>
    <string name="main_building">Bâtiments</string>
    <string name="main_ship">Flotte</string>
    <string name="main_search">Recherches</string>
    <string name="main_space_construction">Chantier spatial</string>
    <string name="main_space">Galaxie</string>

    <string name="row_building_image_descr">Photo du batiment</string>
    <string name="row_building_icon_tool_descr">Construire</string>

    <!--> Alert titles <-->
    <string name="alert_build_action_title">Construction</string>
    <string name="alert_build_action_message">Message</string>
    <string name="resource_meniral">minéraux</string>
    <string name="resource_gas">gaz</string>
    <string name="resource_label_level">Niveau</string>
    <string name="building_label_level">Niveau</string>
    <string name="building_label_resource">Resources</string>
    <string name="building_label_time">Temps</string>
    <string name="row_building_state_building_label">En construction...</string>

</resources>
